fix: better contrast for success/error notifications

--- a/source/06 notice dropdown input sliders context-menu.css
+++ b/source/06 notice dropdown input sliders context-menu.css
@@ -27,10 +27,12 @@
 
 	&.mod-success {
 		background-color: var(--text-success);
+		color: hsl(0 0% 0%);
 	}
 
 	&.mod-error {
 		background-color: var(--text-error);
+		color: hsl(0 0% 100%);
 	}
 
 	&:hover {
